# Atlas

./: .env.dev.template  .env.prod.template  .env.staging.template  .env.template  .gitignore  CLAUDE.md  MCP_CONFIGURATION.md  NEO4J_SETUP.md  README.md  atlas.py  chat_app.py  docker-compose-enterprise.yml  docker-compose-secure.yml  docker-compose.yml  env_config.py  env_validator.py  file_analyzer.py  itsm_data_analyzer.py  mcp_config.py  mcp_servers.json  oracle_file_analyzer.py  pyproject.toml  refine_knowledge_base.py  requirements.txt  validate_mermaid.py
config/graph_schemas/: itsm.yaml  legacy.yaml  oracle.yaml
examples/: claude_config.json
scripts/: deploy-atlas-azure.ps1  deploy-atlas-azure.sh  fix_mermaid_diagrams.py  generate-certificates.ps1
