[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas"
version = "0.1.0"
description = "Agentic AI solution for analysis and discovery of complex application landscapes"
authors = [
    {name = "Atlas Team", email = "atlas@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "analysis", "application", "landscape", "discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "ollama>=0.2.0",
    "google-generativeai>=0.3.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-experimental>=0.3.2",
    "langchain-community>=0.3.7",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-google-genai>=0.2.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
atlas = "atlas:run"

[project.urls]
Homepage = "https://github.com/atlas-team/atlas"
Repository = "https://github.com/atlas-team/atlas"
Issues = "https://github.com/atlas-team/atlas/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=atlas --cov-report=term-missing"